welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:24: error: not found: value getMondehauteur
	var h = getMondehauteur()-1;
                ^